pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = fap2vis.pc

SUBDIRS = src test

modulesdir = $(pkgdatadir)/modules
dist_modules_DATA = \
	     modules/widgets.chs \
	     modules/container.chs \
	     modules/avr.chs \
	     modules/viscomps.chs


EXTRA_DIST = \
	     modules/widgets.chs \
	     modules/container.chs \
	     modules/avr.chs \
	     modules/viscomps.chs

